; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-hashmap.c_test_trivial_compare_func.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-hashmap.c_test_trivial_compare_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_trivial_compare_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_trivial_compare_func() #0 {
  %1 = call i32 @INT_TO_PTR(i8 signext 97)
  %2 = call i32 @INT_TO_PTR(i8 signext 97)
  %3 = call i32 @trivial_compare_func(i32 %1, i32 %2)
  %4 = icmp eq i32 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert_se(i32 %5)
  %7 = call i32 @INT_TO_PTR(i8 signext 97)
  %8 = call i32 @INT_TO_PTR(i8 signext 98)
  %9 = call i32 @trivial_compare_func(i32 %7, i32 %8)
  %10 = icmp eq i32 %9, -1
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert_se(i32 %11)
  %13 = call i32 @INT_TO_PTR(i8 signext 98)
  %14 = call i32 @INT_TO_PTR(i8 signext 97)
  %15 = call i32 @trivial_compare_func(i32 %13, i32 %14)
  %16 = icmp eq i32 %15, 1
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @trivial_compare_func(i32, i32) #1

declare dso_local i32 @INT_TO_PTR(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
